# Beauty_light3

./: .gitignore  README.md  help_script.sh  main.py  main_st_bl3.py  main_stock.py  pyproject.toml  requirements.txt
data/: allow_list.txt
logs/: common_log_2023-11-24_14-06-21.txt  common_log_2023-11-24_14-06-57.txt  common_log_2023-11-24_14-07-06.txt  common_log_2023-11-24_14-07-29.txt  common_log_2023-11-24_14-10-42.txt  common_log_2023-11-24_14-11-11.txt  common_log_2023-11-24_14-12-18.txt  common_log_2023-11-24_14-13-02.txt  common_log_2023-11-24_14-39-38.txt  common_log_2023-11-24_14-41-44.txt  common_log_2023-11-24_14-43-54.txt  common_log_2023-11-24_14-45-48.txt  common_log_2023-11-24_14-46-22.txt  common_log_2023-11-24_14-50-02.txt  common_log_2023-11-24_14-53-21.txt  common_log_2023-11-24_15-13-13.txt
scr/Artelamp/: Artelamp_main.py  download_xml_ArteLamp.py  send_api_batch_ArteLamp.py  xml_to_dict_ArteLamp.py
scr/Favourite/: favourite_main.py
scr/Lightstar/: Lightstar_main.py  download_xml_lightstar.py  send_api_batch_lightstar.py  xml_to_dict_lightstar.py
scr/Maytoni/: Maytoni_main.py  download_xml_maytoni.py  send_api_batch_maytoni.py  xml_to_dict_maytoni.py
scr/Sonex/: Sonex_main.py
scr/Stilfort/: Stilfort_main.py  download_xml_Stilfort.py  send_api_batch_Stilfort.py  xml_to_dict_Stilfort.py
