[tool.poetry]
name = "Beauty_light"
version = "0.1.0"
description = "Обновление остатков для магазина Beauty_light"
authors = ["Your Name <panferovartemv@gmail.com>"]

[tool.poetry.dependencies]
anyio = "^4.0.0"
certifi = "^2023.11.17"
charset-normalizer = "^3.3.2"
h11 = "^0.14.0"
httpcore ="^1.0.2"
httpx = "^0.25.1"
idna = "^3.4"
python-telegram-bot = "^20.6"
requests = "^2.31.0"
sniffio = "^1.3.0"
telegram = "^0.0.1"
urllib3 = "^2.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
